quil-rs/src/program/scheduling/snapshots/quil_rs__program__scheduling__graphviz_dot__tests__graph__fence_all.snap
---
source: quil-rs/src/program/scheduling/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="ordering
timing"];
    "block_0_0" [shape=rectangle, label="[0] FENCE"];
    "block_0_0" -> "block_0_end" [label="ordering
timing"];
    "block_0_end" [shape=circle, label="end"];
  }
}
